styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
  --foreground: hsl(240, 10%, 4%);
  --background: hsl(240, 5%, 96%);
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground: hsl(0, 0%, 98%);
    --background: hsl(240, 6%, 10%);
  }
}

@layer base {
  body {
    @apply bg-zinc-50 dark:bg-zinc-800;
  }
}

body {
  font-family: 'Noto Sans', sans-serif;
}

